cdn JS formatting

--- a/pages/cdn.html
+++ b/pages/cdn.html
@@ -527,7 +527,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/6.0.4/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/6.0.4/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/6.0.4/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/6.0.4/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/6.0.4/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -565,7 +566,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/6.0.3/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/6.0.3/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/6.0.3/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/6.0.3/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -603,7 +605,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/6.0.2/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/6.0.2/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/6.0.2/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/6.0.2/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/6.0.2/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -641,7 +644,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/6.0.1/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/6.0.1/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/6.0.1/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/6.0.1/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/6.0.1/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -679,7 +683,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/6.0.0/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/6.0.0/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/6.0.0/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/6.0.0/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/6.0.0/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -722,7 +727,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.6.2/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.6.2/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.6.2/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.6.2/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.6.2/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -760,7 +766,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.6.1/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.6.1/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.6.1/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.6.1/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.6.1/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -798,7 +805,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.6.0/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.6.0/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.6.0/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.6.0/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.6.0/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -836,7 +844,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.24/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.24/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.24/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.24/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.24/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -874,7 +883,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.23/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.23/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.23/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.23/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.23/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -912,7 +922,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.22/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.22/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.22/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.22/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.22/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -950,7 +961,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.21/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.21/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.21/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.21/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.21/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -988,7 +1000,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.20/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.20/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.20/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.20/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.20/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1026,7 +1039,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.19/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.19/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.19/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.19/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.19/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1064,7 +1078,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.18/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.18/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.18/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.18/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.18/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1102,7 +1117,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.17/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.17/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.17/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.17/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.17/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1140,7 +1156,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.16/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.16/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.16/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.16/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.16/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1178,7 +1195,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.15/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.15/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.15/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.15/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.15/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1210,7 +1228,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.14/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.14/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.14/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.14/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.14/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1242,7 +1261,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.13/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.13/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.13/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.13/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.13/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1274,7 +1294,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.12/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.12/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.12/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.12/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.12/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1306,7 +1327,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.11/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.11/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.11/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.11/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.11/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1338,7 +1360,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.10/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.10/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.10/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.10/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.10/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1370,7 +1393,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.9/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.9/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.9/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.9/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.9/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1402,7 +1426,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.8/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.8/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.8/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1434,7 +1459,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.7/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.7/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.7/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.7/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.7/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1466,7 +1492,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.6/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.6/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.6/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.6/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.6/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1498,7 +1525,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.5/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.5/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.5/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.5/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.5/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1530,7 +1558,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.4/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.4/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.4/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.4/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.4/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1562,7 +1591,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.3/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.3/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.3/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.3/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.3/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1594,7 +1624,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.2/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.2/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.2/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.2/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.2/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1626,7 +1657,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.1/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.1/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.1/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.1/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.1/js/cagov.core.min.js</code></pre>
     </div>
   </li>
@@ -1658,7 +1690,8 @@ permalink: "cdn.html"
   https://california.azureedge.net/cdt/statetemplate/5.5.0/css/colorscheme-trinity.css
   https://california.azureedge.net/cdt/statetemplate/5.5.0/css/colorscheme-trinity.min.css</code></pre>
       <p>JS</p>
-      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.0/js/cagov.core.js
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.0/js/cagov.core.js
   https://california.azureedge.net/cdt/statetemplate/5.5.0/js/cagov.core.min.js</code></pre>
     </div>
   </li>
