Addded download icons text #1577

--- a/pages/sample/icons.html
+++ b/pages/sample/icons.html
@@ -306,6 +306,13 @@ permalink: "visual-design/icons.html"
       </div>
     </div>
 
+    <p>You can also download these icons.</p>
+    <ol>
+      <li>Go the <a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/tree/master">California State Web Template Website Git Repo</a>.</li>
+      <li>Select Code > Download ZIP.</li>
+      <li>In the file, go to src folder > images folder > icons folder (all the icons are in the icons folder).</li>
+    </ol>
+
     <h2>Search icons</h2>
     <p>
       Use the search to find a specific icon. You can also browse icons below.
