added UI kit page #1571

--- a/pages/sample/icons.html
+++ b/pages/sample/icons.html
@@ -248,6 +248,7 @@ permalink: "visual-design/icons.html"
         <li><a href="/visual-design/color.html">Colors</a></li>
         <li><a href="/visual-design/icons.html" class="active">Icons</a></li>
         <li><a href="/visual-design/typography.html">Typography</a></li>
+        <li><a href="/visual-design/ui-kit.html">UI kit</a></li>
       </ul>
     </nav>
   </div>
