--- a/pages/sample/typography.html
+++ b/pages/sample/typography.html
@@ -17,8 +17,8 @@ permalink: "visual-design/typography.html"
         </li>
         <li><a href="/visual-design/color.html">Colors</a></li>
         <li><a href="/visual-design/icons.html">Icons</a></li>
-        <li>
-          <a href="/visual-design/typography.html" class="active">Typography</a>
+        <li><a href="/visual-design/typography.html" class="active">Typography</a></li>
+        <li><a href="/visual-design/ui-kit.html">UI kit</a></li>
         </li>
       </ul>
     </nav>
