--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -128,9 +128,8 @@ permalink: "sitemap.html"
           </li>
         </ul>
         <a class="d-block m-y" href="/visual-design/icons.html">Icons</a>
-        <a class="d-block m-y" href="/visual-design/typography.html">
-          Typography
-        </a>
+        <a class="d-block m-y" href="/visual-design/typography.html">Typography</a>
+        <a class="d-block m-y" href="/visual-design/ui-kit.html">UI kit</a>
       </div>
       <div class="col-md-6">
         <h2 class="h3 m-t">Components</h2>
