compressed the UI kit to zip

--- a/pages/sample/ui-kit.html
+++ b/pages/sample/ui-kit.html
@@ -43,7 +43,7 @@ permalink: "visual-design/ui-kit.html"
       <li>QA/validate after something is developed</li>
     </ul>
 
-<a class="btn btn-primary" href="/images/State-Template-UI-Kit.fig">Download the UI kit</a>
+<a class="btn btn-primary" href="/images/State-Template-UI-Kit.zip">Download the UI kit</a>
 
     <h2>Getting started</h2>
     <p>
