--- a/pages/sample/ui-kit.html
+++ b/pages/sample/ui-kit.html
@@ -15,9 +15,7 @@ permalink: "visual-design/ui-kit.html"
       <span class="sr-only" id="side-navigation-label">Side navigation</span>
       <ul class="list-navigation">
         <li>
-          <a href="javascript:;" aria-hidden="true" class="d-none"
-            >Visual design</a
-          >
+          <a href="javascript:;" aria-hidden="true" class="d-none">Visual design</a>
         </li>
         <li><a href="/visual-design/color.html">Colors</a></li>
         <li><a href="/visual-design/icons.html">Icons</a></li>
