updated UI kit page

--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -43,6 +43,7 @@ permalink: "visual-design/color.html"
         </li>
         <li><a href="/visual-design/icons.html">Icons</a></li>
         <li><a href="/visual-design/typography.html">Typography</a></li>
+        <li><a href="/visual-design/ui-kit.html">UI kit</a></li>
       </ul>
     </nav>
   </div>
