--- a/pages/sample/ui-kit.html
+++ b/pages/sample/ui-kit.html
@@ -27,21 +27,25 @@ permalink: "visual-design/ui-kit.html"
   <div class="col-lg-9 p-b-lg">
     <h1 class="mt-lg-0">UI kit</h1>
 
-    <nav class="page-navigation"></nav>
 
-    <h2>Get the UI kit</h2>
-    <p>
-      We provide a UI kit in Figma so you can prototype your department website or projects. Our kit has a library of elements that are ready to go when you need them. You save time because you don’t have to build or scour the internet for items. This helps you:
-    </p>
+    <div class="card">
+      <div class="card-body brd-solid-1 brd-gray-200 rounded-5">
+          <h2 class="m-t-0">Get the UI kit</h2>
+          <p>
+            We provide a UI kit in Figma so you can prototype your department website or projects. Our kit has a library of elements that are ready to go when you need them. You save time because you don’t have to build or scour the internet for items. This helps you:
+          </p>
 
-    <ul class="m-b-md">
-      <li>Quickly and easily use existing components, typography, and colors for your project</li>
-      <li>Review and receive approval for a design/concept</li>
-      <li>Communicate expectations with your developer</li>
-      <li>QA/validate after something is developed</li>
-    </ul>
+          <ul class="m-b-md m-t">
+            <li>Quickly and easily use existing components, typography, and colors for your project</li>
+            <li>Review and receive approval for a design/concept</li>
+            <li>Communicate expectations with your developer</li>
+            <li>QA/validate after something is developed</li>
+          </ul>
+        <a class="btn btn-primary p-x-md m-b" href="/images/State-Template-UI-Kit.zip">Download the UI kit</a>
+      </div>
+    </div>
 
-<a class="btn btn-primary" href="/images/State-Template-UI-Kit.zip">Download the UI kit</a>
+
 
     <h2>Getting started</h2>
     <p>
@@ -57,8 +61,6 @@ permalink: "visual-design/ui-kit.html"
     <p>Figma allows everyone to have a free account (limited options but you’re still able to use the UI kit and prototype). There are also team and enterprise accounts. Check with your department about using Figma.</p>
 
     <p>The UI kit provides more detail on how to use the kit.</p>
-
-    <p>You can also download these icons.</p>
  
 
     <h2>Starter site prototype</h2>
@@ -74,7 +76,7 @@ permalink: "visual-design/ui-kit.html"
       <li>Careers</li>
       <li>Newsroom</li>
     </ul>
-<p>&hellip and more!</p>
+<p>&hellip; and more!</p>
 
   </div>
 </div>
