removed misleading folder paths

--- a/pages/sample/implementation-steps.html
+++ b/pages/sample/implementation-steps.html
@@ -180,11 +180,7 @@ permalink: "/get-started/implementation-steps.html"
           <p>
             From your code comparison, make the necessary changes and updates to
             your code. Usually, incremental versions will not require any
-            structural template adjustments. You only need to replace core CSS (
-            <code>/src/scss/</code>
-            ) and JS (
-            <code>/src/js/</code>
-            ) files via NPM install or update the CDN links.
+            structural template adjustments. You only need to replace core CSS and JS files via NPM install or update the CDN links.
           </p>
         </span>
       </li>
