updated color customization text in color page

--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -54,21 +54,7 @@ permalink: "visual-design/color.html"
       color themes help create consistent experiences across products.
     </p>
 
-    <h2 id="AddAColorTheme">Add a color theme</h2>
-    <p>There are two ways to customize your main theme colors:</p>
-    <ul>
-      <li>
-        Change the primary and secondary theme color variables in the SASS file
-        (/src/scss/colortheme/oceanside.scss).
-      </li>
-      <li>
-        Manually find and replace your main theme colors and their variations in
-        the CSS file.
-      </li>
-    </ul>
-    <p>
-      Use meaningful colors to visually communicate what people need to see.
-    </p>
+
 
     <h2 id="ColorThemes">Color themes</h2>
     <p>
@@ -198,6 +184,15 @@ permalink: "visual-design/color.html"
         </div>
       </div>
     </div>
+
+
+
+
+    <h2 id="AddAColorTheme">Customize color theme</h2>
+    <p>To customize your main theme colors change the theme color variables in the color theme CSS file
+      (/state-template/css/colortheme-oceanside.css). Use meaningful colors to visually communicate what people need to see.</p>
+
+
   </div>
 </div>
 
