added missing closing p tag

--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -200,7 +200,7 @@ permalink: "visual-design/color.html"
     <p>To customize your main theme colors change the theme color variables in the color theme CSS file
       (/state-template/css/colortheme-oceanside.css). Use meaningful colors to visually communicate what people need to see.</p>
 
-<p><span class="text-highlight-primary">Note:</span> State Web Template is using three primary colors and three secondary colors with multiple darker and lighter variations each. 
+<p><span class="text-highlight-primary">Note:</span> State Web Template is using three primary colors and three secondary colors with multiple darker and lighter variations each. </p>
   <ul>
     <li>Primary color variables: <code>--color-p1</code>, <code>--color-p2</code>, <code>--color-p3</code></li>
     <li>Secondary color variables: <code>--color-s1</code>, <code>--color-s2</code>, <code>--color-s3</code></li>
