added missing opeing P tag

--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -263,7 +263,7 @@ $color-p2-lightest: tint($color-p2, 60%);
 
 
   
-  After picking your custom primary and secondary colors all you need to do is to convert your updated SASS file into CSS. For that you can use online <a href="https://jsonformatter.org/sass-to-css">SASS to CSS converter</a> or use your own local SASS to CSS converter setup.</p>
+  <p>After picking your custom primary and secondary colors all you need to do is to convert your updated SASS file into CSS. For that you can use online <a href="https://jsonformatter.org/sass-to-css">SASS to CSS converter</a> or use your own local SASS to CSS converter setup.</p>
 
   </div>
 </div>
