--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -249,7 +249,7 @@ permalink: "visual-design/color.html"
 
 
 <h3>SASS theme file colors customization</h3>
-<p>If you don't want to deal with that many colors use our <a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Development/blob/main/src/scss/colortheme/oceanside.scss">SASS color scheme file</a>, witch uses only 3 primary and 3 secondary colors. Darker and lighter variations for those colors are created automatically by using SASS functions.</p>
+<p>If you don't want to deal with that many colors use our <a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Development/blob/main/src/scss/colortheme/oceanside.scss">SASS color scheme file</a>, which uses only 3 primary and 3 secondary colors. Darker and lighter variations for those colors are created automatically by using SASS functions.</p>
 <p>Here is how we use darken and tint SASS functions to achieve lighter and darker color variations in our SASS color theme file.</p>
 <pre>// primary color
 $color-p2: #046b99;
