added some padding bottom to the side nav column

--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -6,7 +6,7 @@ permalink: "visual-design/color.html"
 ---
 
 <div class="row">
-  <div class="col-lg-3" role="complementary">
+ <div class="col-lg-3 pb-lg-5" role="complementary">
     <!-- Side navigation -->
     <nav aria-labelledby="color-themes-list" class="side-navigation sticky-6">
       <ul class="list-navigation">
