--- a/pages/sample/navigation-icons.html
+++ b/pages/sample/navigation-icons.html
@@ -7,7 +7,7 @@ navigation: "../modules/nav-icons.html"
 ---
 
 <div class="row">
-  <div class="col-lg-3" role="complementary">
+ <div class="col-lg-3 pb-lg-5" role="complementary">
     <!-- Side navigation -->
     <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
       <ul class="list-navigation">
