--- a/pages/sample/typography.html
+++ b/pages/sample/typography.html
@@ -6,7 +6,7 @@ permalink: "visual-design/typography.html"
 ---
 
 <div class="row">
-  <div class="col-lg-3" role="complementary">
+ <div class="col-lg-3 pb-lg-5" role="complementary">
     <!-- Side navigation -->
     <nav aria-label="Side navigation" class="side-navigation sticky-6">
       <ul class="list-navigation">
