--- a/pages/structure.html
+++ b/pages/structure.html
@@ -6,7 +6,7 @@ permalink: "structure.html"
 ---
 
 <div class="row">
-  <div class="col-lg-3" role="complementary">
+  <div class="col-lg-3 pb-lg-5" role="complementary">
     <!-- Side navigation -->
     <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
       <ul class="list-navigation">
