--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -131,9 +131,15 @@ permalink: "download-and-setup.html"
         </p>
         <div class="text-left">
           <a
-            class="btn btn-outline-primary p-x-md"
+            class="btn btn-outline-primary p-x"
             href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-HTML">
-            HTML sample template GitHub repo
+            Sample template GitHub repo
+          </a>
+
+          <a
+            class="btn btn-outline-primary p-x"
+            href="https://office-of-digital-services.github.io/California-State-Web-Template-HTML/">
+            Live demo of starter stie
           </a>
         </div>
       </div>
@@ -149,7 +155,7 @@ permalink: "download-and-setup.html"
         </p>
         <div class="text-left">
           <a
-            class="btn btn-outline-primary p-x-md"
+            class="btn btn-outline-primary p-x"
             href="https://www.npmjs.com/package/@cagovweb/state-template">
             NPM package information
           </a>
@@ -166,7 +172,7 @@ permalink: "download-and-setup.html"
           increase performance, and provide the fastest site experience.
         </p>
         <div class="text-left">
-          <a class="btn btn-outline-primary p-x-md" href="/cdn.html">
+          <a class="btn btn-outline-primary p-x" href="/cdn.html">
             All CSS/JS CDN links
           </a>
         </div>
